--- a/index.html
+++ b/index.html
@@ -2,5 +2,30 @@
 <head>
 </head>
 <body>
-This is my webpage.
+</body>
+<head>
+  <Title>Das's homepage</Title>
+</head>
+<body>
+<h1>Welcome to my webpage!</h1>
+  <h2>Something about me</h2>
+  Hi, I am Malia. I am a History Major and digital studies minor at Saint Mary's College in Moraga, CA.
+  <img src="Das emoji-09.png" width="300">
+  <h2>Hobbies:</h2>
+  Some of my hobbies are:
+  <ul>
+    <li>Playing soccer</li>
+    <li>Hanging out with freinds</li>
+    <li>Trying new foods</li>
+    <li>Being outside</li>
+    <li>Oragami</li>
+    <li>Painting</li>
+  </ul>
+  
+  <h2>Classes that I am taking in Fall 2025</h2>
+  <ol>
+    <li>CS 102 - Latin American Revolutions </li>
+    <li>CS 380 - Digital Literacy</li>
+    <li>CS 485 - Seminar</li>
+  </ol>
 </body>
