--- a/index.html
+++ b/index.html
@@ -24,8 +24,18 @@
   
   <h2>Classes that I am taking in Fall 2025</h2>
   <ol>
-    <li>CS 102 - Latin American Revolutions </li>
-    <li>CS 380 - Digital Literacy</li>
-    <li>CS 485 - Seminar</li>
+    <li> LA Revolutions </li>
+    <li>Digital Literacy</li>
+    <li> Seminar</li>
   </ol>
+
+    <table>
+    <tr>
+      <td>LA Revolutions </td>
+      <td>Digital Literacy </td>
+      <td>Seminar </td>
+      <td>Tue, Thurs</td>
+      <td>11:40 am - 12:55 pm</td>
+    </tr>
+  </table>
 </body>
