--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <td>LA Revolutions </td>
       <td>Digital Literacy </td>
       <td>Seminar </td>
-      <td>Tue, Thurs</td>
+      <td>Tuesday and Thursday</td>
       <td>11:40 am - 12:55 pm</td>
     </tr>
   </table>
