--- a/index.html
+++ b/index.html
@@ -28,14 +28,27 @@
     <li>Digital Literacy</li>
     <li> Seminar</li>
   </ol>
-
   <table>
     <tr>
-      <td>LA Revolutions </td>
-      <td>Digital Literacy</td>
-      <td>Seminar</td>
-      <td>Tuesday and Thursday</td>
+      <td>CS 102</td>
+      <td>Coding is Fun</td>
+      <td>GV 330</td>
+      <td>Tue, Thurs</td>
       <td>11:40 am - 12:55 pm</td>
+    </tr>
+    <tr>
+      <td>CS 380</td>
+      <td>Artificial Intelligence</td>
+      <td>GV 240</td>
+      <td>Tue, Thurs</td>
+      <td>3:20 pm - 5 pm</td>
+    </tr>
+    <tr>
+      <td>CS 485</td>
+      <td>Databases</td>
+      <td>GV 240</td>
+      <td>Tue, Thurs</td>
+      <td>10:05 am - 11:20 am</td>
     </tr>
   </table>
 </body>
