--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>Welcome to my webpage!</h1>
   <h2>Something about me</h2>
   Hi, I am Malia. I am a History Major and digital studies minor at Saint Mary's College in Moraga, CA.
-  <img src="E9F0F9CC-FCEF-47D5-8B0F-D7514E315FF1.jpg width="300">
+  <img src="E9F0F9CC-FCEF-47D5-8B0F-D7514E315FF1.jpg" width="300">
   <h2>Hobbies:</h2>
   Some of my hobbies are:
   <ul>
@@ -30,23 +30,23 @@
   </ol>
   <table>
     <tr>
-      <td>CS 102</td>
-      <td>Coding is Fun</td>
-      <td>GV 330</td>
+      <td>HIST 321</td>
+      <td>LA Revolutions</td>
+      <td>Dante 115</td>
       <td>Tue, Thurs</td>
       <td>11:40 am - 12:55 pm</td>
     </tr>
     <tr>
-      <td>CS 380</td>
-      <td>Artificial Intelligence</td>
-      <td>GV 240</td>
+      <td>CS 100</td>
+      <td>Digital Literacy</td>
+      <td>GV 330</td>
       <td>Tue, Thurs</td>
       <td>3:20 pm - 5 pm</td>
     </tr>
     <tr>
-      <td>CS 485</td>
-      <td>Databases</td>
-      <td>GV 240</td>
+      <td>SEM 350</td>
+      <td>Seminar</td>
+      <td>Dante 215</td>
       <td>Tue, Thurs</td>
       <td>10:05 am - 11:20 am</td>
     </tr>
