--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>Welcome to my webpage!</h1>
   <h2>Something about me</h2>
   Hi, I am Malia. I am a History Major and digital studies minor at Saint Mary's College in Moraga, CA.
-  <img src="E9F0F9CC-FCEF-47D5-8B0F-D7514E315FF1.jpg" width="100">
+  <img src="E9F0F9CC-FCEF-47D5-8B0F-D7514E315FF1.jpg" width="200">
   <h2>Hobbies:</h2>
   Some of my hobbies are:
   <ul>
@@ -28,7 +28,15 @@
     <li>Digital Literacy</li>
     <li> Seminar</li>
   </ol>
+
   <table>
+     <tr>
+      <th>Course num</th>
+      <th>Course name</th>
+      <th>Classroom</th>
+      <th>Meeting days</th>
+      <th>Meeting time</th>
+    </tr>
     <tr>
       <td>HIST 321</td>
       <td>LA Revolutions</td>
