--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 </body>
 <head>
   <Title>Malia's homepage</Title>
+  <style>
+  table, th, td {
+    border: 1px solid black;
+  }
+  </style>
 </head>
 <body>
 <h1>Welcome to my webpage!</h1>
