--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <h1>Welcome to my webpage!</h1>
   <h2>Something about me</h2>
-  Hi, I am Malia. I am a History Major and digital studies minor at Saint Mary's College in Moraga, CA.
+  <p>Hi, I am Malia. I am a History Major and digital studies minor at Saint Mary's College in Moraga, CA.</p>
   <br/>
   <img src="E9F0F9CC-FCEF-47D5-8B0F-D7514E315FF1.jpg" width="200">
   <h2>Hobbies:</h2>
