--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   table, th, td {
     border: 1px solid black;
   }
+  body {
+    background-color: #f0f0f0; /* Example: light grey */
+    }</head>
   </style>
-</head>
+
 <body>
 <h1>Welcome to my webpage!</h1>
   <h2>Something about me</h2>
