--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
     border: 1px solid black;
   }
   body {
-    background-color: #f0f0f0; /* Example: light grey */
-    }</head>
+  /* Ensure the body takes up the full height of the viewport */
+  min-height: 100vh; 
+  /* Define the linear gradient with desired blue shades and direction */
+  background: linear-gradient(to right, #ADD8E6, #4682B4, #191970); 
+  /* Fallback color for browsers that don't support gradients */
+  background-color: #ADD8E6; 
+}
   </style>
 
 <body>
