--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
     <li> Seminar</li>
   </ol>
 
-    <a href="schedule.html">Look at my class schedule here.</a>
+    <a href="Schedule.html">Look at my class schedule here.</a>
 
 </body>
