Update  style Schedule.html

--- a/Schedule.html
+++ b/Schedule.html
@@ -1,4 +1,19 @@
 <!DOCTYPE html>
+
+  <style>
+  table, th, td {
+    border: 1px solid black;
+  }
+  body {
+  /* Ensure the body takes up the full height of the viewport */
+  min-height: 100vh; 
+  /* Define the linear gradient with desired blue shades and direction */
+  background: linear-gradient(to right, #ADD8E6, #4682B4, #191970); 
+  /* Fallback color for browsers that don't support gradients */
+  background-color: #ADD8E6; 
+}
+  </style>
+
   <table>
      <tr>
       <th>Course num</th>
