changed the width of the video embed

--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
     <a href="Schedule.html">Look at my class schedule here.</a>
 
     <h1> My campus: </h1>
-    <iframe width="727" height="418" src="https://www.youtube.com/embed/Vk8xCKMvZik" title="Inspire. Engage. Transform. We are Gaels." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="411"src="https://www.youtube.com/embed/Vk8xCKMvZik" title="Inspire. Engage. Transform. We are Gaels." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   
 </body>
