--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <body>
 </body>
 <head>
+  <div align="center">
   <Title>Malia's homepage</Title>
+  
   <style>
   table, th, td {
     border: 1px solid black;
