--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
 </body>
 <head>
   <div align="center">
+    
   <Title>Malia's homepage</Title>
   
   <style>
+<div style= "display: flex; justify-content: space between; align items: flex-start;">
+  <div style = "text-align: left ; ">
+    <h3> Hobbies</h3>
+    <ul>
+      <li>Reading</li>
+      <li>Drawing</li>
+      <li>Hiking</li>
+    <ul/>
+  <div style= "text-align: right;">
+    <h3>Classes</h3>
+    <ul style= "list-stle-position: inside;">
+      <li>CS121</li>
+      <li>History 111</li>
+      <li>TRS 97</li>
+    </ul>
+  </div>
+</div>
+    
   table, th, td {
     border: 1px solid black;
   }
