--- a/index.html
+++ b/index.html
@@ -9,24 +9,6 @@
   <Title>Malia's homepage</Title>
   
   <style>
-<div style= "display: flex; justify-content: space between; align items: flex-start;">
-  <div style = "text-align: left ; ">
-    <h3> Hobbies</h3>
-    <ul>
-      <li>Reading</li>
-      <li>Drawing</li>
-      <li>Hiking</li>
-    <ul/>
-  <div style= "text-align: right;">
-    <h3>Classes</h3>
-    <ul style= "list-stle-position: inside;">
-      <li>CS121</li>
-      <li>History 111</li>
-      <li>TRS 97</li>
-    </ul>
-  </div>
-</div>
-    
   table, th, td {
     border: 1px solid black;
   }
@@ -46,6 +28,7 @@
   <p>Hi, I am Malia. I am a History Major and digital studies minor at Saint Mary's College in Moraga, CA.</p>
   <br/>
   <img src="E9F0F9CC-FCEF-47D5-8B0F-D7514E315FF1.jpg" width="200">
+  <div style= "text-align : left;">
   <h2>Hobbies:</h2>
   Some of my hobbies are:
   <ul>
@@ -56,14 +39,16 @@
     <li>Oragami</li>
     <li>Painting</li>
   </ul>
-  
+  </div>
+    
+  <div style= "text-align : right:">
   <h2>Classes that I am taking in Fall 2025</h2>
   <ol>
     <li> LA Revolutions </li>
     <li>Digital Literacy</li>
     <li> Seminar</li>
   </ol>
-
+  </div>
     <a href="Schedule.html">Look at my class schedule here.</a>
 
     <h1> My campus: </h1>
