--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
   <p>Hi, I am Malia. I am a History Major and digital studies minor at Saint Mary's College in Moraga, CA.</p>
   <br/>
   <img src="E9F0F9CC-FCEF-47D5-8B0F-D7514E315FF1.jpg" width="200">
-  <div style= "text-align : left;">
+  
+  <div style= "margin-left: 0.25;">
   <h2>Hobbies:</h2>
   Some of my hobbies are:
   <ul>
