--- a/index.html
+++ b/index.html
@@ -29,26 +29,26 @@
   <br/>
   <img src="E9F0F9CC-FCEF-47D5-8B0F-D7514E315FF1.jpg" width="200">
   
-  <div style= "margin-left: 0.25;">
-  <h2>Hobbies:</h2>
-  Some of my hobbies are:
-  <ul>
-    <li>Playing soccer</li>
-    <li>Hanging out with freinds</li>
-    <li>Trying new foods</li>
-    <li>Being outside</li>
-    <li>Oragami</li>
-    <li>Painting</li>
-  </ul>
+  <div style= "margin-left: 150px;">
+    <h2>Hobbies:</h2>
+    Some of my hobbies are:
+    <ul>
+      <li>Playing soccer</li>
+      <li>Hanging out with freinds</li>
+      <li>Trying new foods</li>
+      <li>Being outside</li>
+      <li>Oragami</li>
+      <li>Painting</li>
+    </ul>
   </div>
     
-  <div style= "text-align : right:">
-  <h2>Classes that I am taking in Fall 2025</h2>
-  <ol>
-    <li> LA Revolutions </li>
-    <li>Digital Literacy</li>
-    <li> Seminar</li>
-  </ol>
+  <div style= "text-align : right; padding-right: 100px;">
+    <h2>Classes that I am taking in Fall 2025</h2>
+    <ol>
+      <li> LA Revolutions </li>
+      <li>Digital Literacy</li>
+      <li> Seminar</li>
+    </ol>
   </div>
     <a href="Schedule.html">Look at my class schedule here.</a>
 
