--- a/index.html
+++ b/index.html
@@ -26,11 +26,9 @@
 </head>
 <body>
 
-<h1>The grid-column-start and grid-column-end Properties</h1>
+<h1>My Name is Malia!</h1>
 
-<p>The <em>grid-column-start</em> property specifies where to start a grid item. The <em>grid-column-end</em> property specifies where to end a grid item.</p>
-
-<p>Place the first grid item at column-line 1, and let it end on column-line 3:</p>
+<p>Here is some stuff about me</p>
 
 <div class="grid-container">
   <div class="item1">1</div>
@@ -65,9 +63,11 @@
 
 <body>
 <h1>Welcome to my webpage!</h1>
+<div class="item1">1</div>
   <h2>Something about me</h2>
   <p>Hi, I am Malia. I am a History Major and digital studies minor at Saint Mary's College in Moraga, CA.</p>
   <br/>
+</div>
   <img src="E9F0F9CC-FCEF-47D5-8B0F-D7514E315FF1.jpg" width="200">
   
     <h2>Hobbies:</h2>
