--- a/index.html
+++ b/index.html
@@ -62,12 +62,11 @@
   </style>
 
 <body>
-<h1>Welcome to my webpage!</h1>
-<div class="item1">1</div>
+<h1>I am a senior in college</h1>
   <h2>Something about me</h2>
-  <p>Hi, I am Malia. I am a History Major and digital studies minor at Saint Mary's College in Moraga, CA.</p>
+  <p> I am also History Major and digital studies minor at Saint Mary's College in Moraga, CA.</p>
   <br/>
-</div>
+
   <img src="E9F0F9CC-FCEF-47D5-8B0F-D7514E315FF1.jpg" width="200">
   
     <h2>Hobbies:</h2>
