--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@
   </style>
 
 <body>
-<h1>I am a senior in college</h1>
-  <h2>Something about me</h2>
-  <p> I am also History Major and digital studies minor at Saint Mary's College in Moraga, CA.</p>
+<h2>Some stuff about me</h2>
+  <p> I am a History Major and digital studies minor at Saint Mary's College in Moraga, CA.</p>
   <br/>
 
   <img src="E9F0F9CC-FCEF-47D5-8B0F-D7514E315FF1.jpg" width="200">
