--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
 
 
 <div class="grid-container">
-  <div class="item1">1</div>
+  <div class="item1">    <h2>Hobbies:</h2>
+    Some of my hobbies are:
+    <ul>
+      <li>Playing soccer</li>
+      <li>Hanging out with freinds</li>
+      <li>Trying new foods</li>
+      <li>Being outside</li>
+      <li>Oragami</li>
+      <li>Painting</li>
+    </ul></div>
   <div class="item2">2</div>
   <div class="item3">3</div>  
   <div class="item4">4</div>
