--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   display: grid;
   grid-template-columns: auto auto auto;
   gap: 10px;
-  background-color: dodgerblue;
-  padding: 10px;
+  background-color: 
+  padding: 5px;
 }
 
 .grid-container > div {
-  background-color: #f1f1f1;
+  background-color: transparent
   text-align: center;
-  padding: 10px;
-  font-size: 30px;
+  padding: 5px;
+  font-size: 20px;
 }
 
 .item1 {
