--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
       <li>Oragami</li>
       <li>Painting</li>
     </ul></div>
-  <div class="item2">2</div>
+  <div class="item2">
+    <h2>Some stuff about me</h2>
+  <p> I am a History Major and digital studies minor at Saint Mary's College in Moraga, CA.</p>
+  <br/>
+  </div>
   <div class="item3">3</div>  
   <div class="item4">4</div>
   <div class="item5">5</div>
