--- a/index.html
+++ b/index.html
@@ -41,29 +41,38 @@
       <li>Oragami</li>
       <li>Painting</li>
     </ul></div>
+  
   <div class="item2">
     <h2>Some stuff about me</h2>
   <p> I am a History Major and digital studies minor at Saint Mary's College in Moraga, CA.</p>
   <br/>
   </div>
+  
   <div class="item3">
-      <img src="E9F0F9CC-FCEF-47D5-8B0F-D7514E315FF1.jpg" width="200">  </div>  
+      <img src="E9F0F9CC-FCEF-47D5-8B0F-D7514E315FF1.jpg" width="200">  
+  </div> 
+  
   <div class="item4">
         <h2>Classes that I am taking in Fall 2025</h2>
     <ol>
       <li> LA Revolutions </li>
       <li>Digital Literacy</li>
       <li> Seminar</li>
-    </ol>  </div>
+    </ol> 
+  </div>
+  
   <div class="item5">   <a href="Schedule.html">Look at my class schedule here.</a>
     </div>
+  
   <div class="item6">
      <h1> My campus: </h1>
     <iframe width="727" height="418" src="https://www.youtube.com/embed/Vk8xCKMvZik" title="Inspire. Engage. Transform. We are Gaels." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
+  
   <div class="item7">
        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3150.8292239346365!2d-122.11151232392464!3d37.840883671968705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f884cd1042763%3A0xf4af4d5ec8f1ac3d!2sSaint%20Mary&#39;s%20College%20of%20California!5e0!3m2!1sen!2sus!4v1759863767729!5m2!1sen!2sus" width="727" height="418" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></body>
   </div>
+  
   <div class="item8">8</div>  
 </div>
 
