--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <title>Malia's Homepage</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    /* Page basics */
     :root { --gap: 12px; }
     * { box-sizing: border-box; }
+
     body {
       margin: 0;
       font-family: system-ui, Arial, sans-serif;
@@ -15,119 +15,59 @@
       background: linear-gradient(to right, #ADD8E6, #4682B4, #191970);
       color: #111;
       padding: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center; /* centers grid on the page */
     }
 
-    h1 { margin: 0 0 16px 0; }
+    h1 {
+      margin: 0 0 16px 0;
+      text-align: center;
+      color: white;
+    }
 
-    /* Grid: 3 equal columns, equal-height rows */
+    /* Grid container */
     .grid-container {
       display: grid;
-      grid-template-columns: repeat(3, 1fr); /* three equal columns */
+      grid-template-columns: repeat(3, 1fr);
       gap: var(--gap);
       padding: var(--gap);
-      align-items: stretch; /* make children stretch vertically */
-      grid-auto-rows: 1fr; /* each row will try to be equal height */
+      align-items: stretch;
+      grid-auto-rows: 1fr;
+      max-width: 1000px; /* keeps grid compact and centered */
+      width: 100%;
+      background-color: rgba(255,255,255,0.05);
+      border-radius: 10px;
     }
 
-    /* Make each grid item a flex column so content can space properly */
+    /* Grid items */
     .grid-container > div {
-      background: rgba(255,255,255,0.06); /* subtle card bg */
+      background: rgba(255,255,255,0.1);
       padding: 12px;
       border-radius: 8px;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
-      align-items: stretch;
-      min-height: 0; /* important for allowing flex children to shrink inside grid */
-      overflow: hidden;
+      align-items: center;
+      text-align: center;
     }
 
-    /* If you want the first card to be a full-width hero, use this.
-       Change to `grid-column: 1 / span 2;` or remove entirely if you want three equal cards. */
+    /* Optional: make the first item span all columns */
     .item1 {
-      grid-column: 1 / -1; /* span all columns (full width) */
+      grid-column: 1 / -1;
     }
 
-    /* Text formatting */
-    h2 { margin: 0 0 8px 0; }
-    p, ul, ol { margin: 0 0 12px 0; padding-left: 1.1em; }
+    /* Limit image size */
+    img {
+      max-width: 150px; /* make image smaller */
+      height: auto;
+      border-radius: 10px;
+      margin: 0 auto;
+    }
 
-    /* Responsive images and iframes */
-    img { max-width: 100%; height: auto; display: block; margin: 0 auto; }
-    /* Use aspect-ratio to keep iframes tidy and responsive */
+    /* Keep iframes responsive and smaller */
     iframe {
       width: 100%;
-      aspect-ratio: 16 / 9;
-      border: 0;
-      display: block;
-    }
+      max-width: 400px;
+      aspect-ratio:
 
-    /* Make layout wrap on small screens */
-    @media (max-width: 900px) {
-      .grid-container { grid-template-columns: repeat(2, 1fr); }
-      .item1 { grid-column: 1 / -1; }
-    }
-    @media (max-width: 520px) {
-      .grid-container { grid-template-columns: 1fr; }
-    }
-  </style>
-</head>
-<body>
-
-  <h1>My Name is Malia!</h1>
-
-  <div class="grid-container">
-    <div class="item1">
-      <h2>Hobbies</h2>
-      <ul>
-        <li>Playing soccer</li>
-        <li>Hanging out with friends</li>
-        <li>Trying new foods</li>
-        <li>Being outside</li>
-        <li>Origami</li>
-        <li>Painting</li>
-      </ul>
-    </div>
-
-    <div class="item2">
-      <h2>Some stuff about me</h2>
-      <p>I am a History Major and Digital Studies minor at Saint Mary's College in Moraga, CA.</p>
-    </div>
-
-    <div class="item3">
-      <img src="E9F0F9CC-FCEF-47D5-8B0F-D7514E315FF1.jpg" alt="photo">
-    </div>
-
-    <div class="item4">
-      <h2>Classes (Fall 2025)</h2>
-      <ol>
-        <li>LA Revolutions</li>
-        <li>Digital Literacy</li>
-        <li>Seminar</li>
-      </ol>
-    </div>
-
-    <div class="item5">
-      <a href="Schedule.html">Look at my class schedule here.</a>
-    </div>
-
-    <div class="item6">
-      <h2>My campus</h2>
-      <iframe src="https://www.youtube.com/embed/Vk8xCKMvZik" title="Campus video" allowfullscreen></iframe>
-    </div>
-
-    <div class="item7">
-      <h2>Map</h2>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!..."></iframe>
-    </div>
-
-    <div class="item8">
-      <h2>Extra</h2>
-      <p>Some extra content here.</p>
-    </div>
-  </div>
-
-</body>
-</html>
-    
- 
