--- a/index.html
+++ b/index.html
@@ -129,7 +129,15 @@
 
     <div class="item6">
       <h2>My Campus</h2>
-      <iframe src="https://www.youtube.com/embed/Vk8xCKMvZik" title="Campus video" allowfullscreen></iframe>
+      <iframe
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3150.8292239346365!2d-122.11151232392464!3d37.840883671968705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f884cd1042763%3A0xf4af4d5ec8f1ac3d!2sSaint%20Mary's%20College%20of%20California!5e0!3m2!1sen!2sus!4v1739877327633!5m2!1sen!2sus"
+  width="400"
+  height="300"
+  style="border:0;"
+  allowfullscreen=""
+  loading="lazy"
+  referrerpolicy="no-referrer-when-downgrade">
+</iframe>
     </div>
 
     <div class="item7">
