--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       padding: 20px;
       display: flex;
       flex-direction: column;
-      align-items: center; /* centers grid on the page */
+      align-items: center;
     }
 
     h1 {
@@ -34,7 +34,7 @@
       padding: var(--gap);
       align-items: stretch;
       grid-auto-rows: 1fr;
-      max-width: 1000px; /* keeps grid compact and centered */
+      max-width: 1000px;
       width: 100%;
       background-color: rgba(255,255,255,0.05);
       border-radius: 10px;
@@ -50,22 +50,29 @@
       justify-content: flex-start;
       align-items: center;
       text-align: center;
+      transition: all 0.3s ease-in-out;
     }
 
-    /* Optional: make the first item span all columns */
+    /* Hover effect for experimentation */
+    .grid-container > div:hover {
+      transform: scale(1.05);
+      background-color: rgba(255, 255, 255, 0.2);
+    }
+
+    /* First item spans all columns */
     .item1 {
       grid-column: 1 / -1;
     }
 
     /* Limit image size */
     img {
-      max-width: 150px; /* make image smaller */
+      max-width: 150px;
       height: auto;
       border-radius: 10px;
       margin: 0 auto;
     }
 
-    /* Keep iframes responsive and smaller */
+    /* Responsive iframes */
     iframe {
       width: 100%;
       max-width: 400px;
@@ -132,19 +139,15 @@
       <iframe src="https://www.youtube.com/embed/Vk8xCKMvZik" title="Campus video" allowfullscreen></iframe>
     </div>
 
-   <div class="item7">
-  <h2>Map</h2>
-  <iframe
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4175.224765916741!2d-122.1124351385482!3d37.84047557512098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f884cd1042763%3A0xf4af4d5ec8f1ac3d!2sSaint%20Mary's%20College%20of%20California!5e1!3m2!1sen!2sus!4v1759863752354!5m2!1sen!2sus"
-    width="100%"
-    max-width="400px"
-    height="300"
-    style="border:0; border-radius:8px;"
-    allowfullscreen=""
-    loading="lazy"
-    referrerpolicy="no-referrer-when-downgrade">
-  </iframe>
-</div>
+    <div class="item7">
+      <h2>Map</h2>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4175.224765916741!2d-122.1124351385482!3d37.84047557512098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f884cd1042763%3A0xf4af4d5ec8f1ac3d!2sSaint%20Mary's%20College%20of%20California!5e1!3m2!1sen!2sus!4v1759863752354!5m2!1sen!2sus"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div>
   </div>
 </body>
 </html>
