--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
     /* Hover effect for experimentation */
     .grid-container > div:hover {
       transform: scale(1.05);
-      background-color: rgba(255, 255, 255, 0.2);
+      background-color: rgba(255, 255, 255, 0.25);
+      box-shadow: 0 8px 15px rgba(0,0,0,0.3);
     }
 
     /* First item spans all columns */
@@ -72,7 +73,7 @@
       margin: 0 auto;
     }
 
-    /* Responsive iframes */
+    /* Keep iframes responsive and same size */
     iframe {
       width: 100%;
       max-width: 400px;
@@ -143,7 +144,7 @@
       <h2>Map</h2>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4175.224765916741!2d-122.1124351385482!3d37.84047557512098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f884cd1042763%3A0xf4af4d5ec8f1ac3d!2sSaint%20Mary's%20College%20of%20California!5e1!3m2!1sen!2sus!4v1759863752354!5m2!1sen!2sus"
-        allowfullscreen=""
+        allowfullscreen
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade">
       </iframe>
